--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/dev-server": "^0.5.5",
     "@react-native-community/cli-server-api": "^13.6.9",
-    "expo": "^51.0.0",
+    "expo": "^51.0.38",
     "expo-av": "^14.0.5",
     "react": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-gesture-handler": "^2.16.1"
+    "react-native": "^0.74.5",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "@expo/cli": "^0.18.19"
+    "@expo/cli": "^0.18.30"
   }
 }
