--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "react-native-sample-app",
+  "name": "internal-sound-generation",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "App.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/dev-server": "^0.5.5",
-    "@react-native-community/cli-server-api": "^13.6.9",
-    "expo": "^51.0.38",
-    "expo-av": "~14.0.7",
+    "expo": "^48.0.21",
     "react": "18.2.0",
-    "react-native": "0.74.6",
-    "react-native-gesture-handler": "~2.16.1"
+    "react-native": "0.71.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@expo/cli": "^0.18.30"
+    "@babel/core": "^7.24.0"
   }
 }
