--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^48.0.21",
+    "expo": "^52.0.11",
+    "expo-av": "^15.0.1",
+    "expo-sensors": "~14.0.1",
     "react": "18.2.0",
-    "react-native": "0.71.14"
+    "react-native": "0.72.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0"
+    "@babel/core": "^7.24.0",
+    "@babel/preset-react": "^7.25.9"
   }
 }
