--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "expo": {
       "name": "Internal Sound Generation",
       "slug": "internal-sound-generation",
-      "sdkVersion": "52.0.0",  // Adjust according to your SDK version
+      "sdkVersion": "52.0.0",
       "platforms": ["android"],
       "version": "1.0.0",
       "orientation": "portrait",
@@ -16,7 +16,7 @@
         "bundleIdentifier": "com.yourname.yourapp"
       },
       "android": {
-        "jsEngine": "hermes"  // Enable Hermes for Android
+        "jsEngine": "hermes"
       }
     }
   }
