--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "expo": "^52.0.11",
     "expo-av": "^15.0.1",
     "expo-sensors": "~14.0.1",
-    "react": "18.2.0",
-    "react-native": "0.72.10"
+    "react": "^18.3.1",
+    "react-native": "^0.76.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
