--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^52.0.11",
     "expo-av": "^15.0.1",
     "expo-sensors": "~14.0.1",
     "react": "^18.3.1",
@@ -17,6 +16,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
-    "@babel/preset-react": "^7.25.9"
+    "@babel/preset-react": "^7.25.9",
+    "expo": "^52.0.11"
   }
 }
