--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "expo-av": "^15.0.1",
     "expo-sensors": "~14.0.1",
     "react": "^18.3.1",
-    "react-native": "^0.76.3"
+    "react-native": "^0.76.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-react": "^7.25.9",
-    "expo": "^52.0.11"
+    "@react-native-community/cli": "^15.1.2",
+    "expo": "~52.0.20"
   }
 }
