--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "internal-sound-generation",
   "version": "1.0.0",
-  "main": "App.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -12,7 +12,8 @@
     "expo-av": "^15.0.1",
     "expo-sensors": "~14.0.1",
     "react": "^18.3.1",
-    "react-native": "^0.76.5"
+    "react-native": "^0.76.5",
+    "react-native-gesture-handler": "^2.21.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
